[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kumaone"
dynamic = ["version"]
description = 'CLI helper for uptime kuma'
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = ["kumaone", "kuma", "uptime-kuma", "monitoring", "cli", "python3"]
authors = [
  { name = "Dalwar Hossain", email = "dalwar23@pm.me" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-socketio[client] >= 5.11.0",
  "pyyaml >= 6.0.1",
  "requests >= 2.31.0",
  "typer[all] >= 0.9.0",
  "validators >= 0.22.0"
]

[project.urls]
Documentation = "https://kumaone.rtfd.io/"
Issues = "https://github.com/dalwar23/kumaone/issues"
Source = "https://github.com/dalwar23/kumaone"

[project.scripts]
kumaone = "src.kumaone.main:app"

[tool.hatch.version]
path = "src/kumaone/__about__.py"

[tool.hatch.build]
include = [
  "src/kumaone",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".github/",
  "docs/",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=7.4.0",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.12.1",
  "mypy>=1.8.0",
  "ruff>=0.1.14",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/kumaone tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Argument name should be lowercase
  "N803",
  # fString without a placeholder
  "F541",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["kumaone"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["kumaone", "tests"]
branch = true
parallel = true
omit = [
  "src/kumaone/__about__.py",
]

[tool.coverage.paths]
kumaone = ["src/kumaone", "*/kumaone/src/kumaone"]
tests = ["tests", "*/kumaone/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bumpversion]
current_version = "0.0.1-alpha.4"
#parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
#serialize = ["{major}.{minor}.{patch}"]
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        -(?P<pre_label>alpha|beta|rc|stable)
        (?:.(?P<pre_n>[0-9]+))?
    )?
"""
serialize = [
  "{major}.{minor}.{patch}-{pre_label}.{pre_n}",
  "{major}.{minor}.{patch}",
]
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/kumaone/__about__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "{current_version}"
replace = "{new_version}"

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values =[
  "alpha",
  "beta",
  "rc",
  "stable",
]
[tool.bumpversion.parts.pre_n]
independent = true
